--- a/packages/fluent/scss/action-buttons/_variables.scss
+++ b/packages/fluent/scss/action-buttons/_variables.scss
@@ -11,13 +11,13 @@ $kendo-actions-padding-y: map-get( $kendo-spacing, 3 ) !default;
 $kendo-actions-border-width: 0px !default;
 /// The background color of the action buttons container.
 /// @group action-buttons
-$kendo-actions-bg: null !default;
+$kendo-actions-bg: inherit !default;
 /// The text color of the action buttons container.
 /// @group action-buttons
-$kendo-actions-text: null !default;
+$kendo-actions-text: inherit !default;
 /// The border color of the action buttons container.
 /// @group action-buttons
-$kendo-actions-border: null !default;
+$kendo-actions-border: inherit !default;
 
 /// Spacing between the action buttons.
 /// @group button
