--- a/packages/fluent/scss/switch/_theme.scss
+++ b/packages/fluent/scss/switch/_theme.scss
@@ -24,17 +24,25 @@
 
         // Normal state
         .k-switch-track {
+            --INTERNAL--kendo-switch-off-track-text: var( --kendo-switch-off-track-text, #{$kendo-switch-off-track-text} );
+            --INTERNAL--kendo-switch-off-track-bg: var( --kendo-switch-off-track-bg, #{$kendo-switch-off-track-bg} );
+            --INTERNAL--kendo-switch-off-track-border: var( --kendo-switch-off-track-border, #{$kendo-switch-off-track-border} );
+
             @include fill(
-                var( --INTERNAL--kendo-switch-off-track-text, #{$kendo-switch-off-track-text} ),
-                var( --INTERNAL--kendo-switch-off-track-bg, #{$kendo-switch-off-track-bg} ),
-                var( --INTERNAL--kendo-switch-off-track-border, #{$kendo-switch-off-track-border} )
+                var( --INTERNAL--kendo-switch-off-track-text, inherit ),
+                var( --INTERNAL--kendo-switch-off-track-bg, transparent ),
+                var( --INTERNAL--kendo-switch-off-track-border, inherit )
             );
         }
         .k-switch-thumb {
+            --INTERNAL--kendo-switch-off-thumb-text: var( --kendo-switch-off-thumb-text, #{$kendo-switch-off-thumb-text} );
+            --INTERNAL--kendo-switch-off-thumb-bg: var( --kendo-switch-off-thumb-bg, #{$kendo-switch-off-thumb-bg} );
+            --INTERNAL--kendo-switch-off-thumb-border: var( --kendo-switch-off-thumb-border, #{$kendo-switch-off-thumb-border} );
+
             @include fill(
-                var( --INTERNAL--kendo-switch-off-thumb-text, #{$kendo-switch-off-thumb-text} ),
-                var( --INTERNAL--kendo-switch-off-thumb-bg, #{$kendo-switch-off-thumb-bg} ),
-                var( --INTERNAL--kendo-switch-off-thumb-border, #{$kendo-switch-off-thumb-border} )
+                var( --INTERNAL--kendo-switch-off-thumb-text, inherit ),
+                var( --INTERNAL--kendo-switch-off-thumb-bg, transparent ),
+                var( --INTERNAL--kendo-switch-off-thumb-border, inherit )
             );
         }
 
@@ -91,17 +99,25 @@
 
         // Normal state
         .k-switch-track {
+            --INTERNAL--kendo-switch-on-track-text: var( --kendo-switch-on-track-text, #{$kendo-switch-on-track-text} );
+            --INTERNAL--kendo-switch-on-track-bg: var( --kendo-switch-on-track-bg, #{$kendo-switch-on-track-bg} );
+            --INTERNAL--kendo-switch-on-track-border: var( --kendo-switch-on-track-border, #{$kendo-switch-on-track-border} );
+
             @include fill(
-                var( --INTERNAL--kendo-switch-on-track-text, #{$kendo-switch-on-track-text} ),
-                var( --INTERNAL--kendo-switch-on-track-bg, #{$kendo-switch-on-track-bg} ),
-                var( --INTERNAL--kendo-switch-on-track-border, #{$kendo-switch-on-track-border} )
+                var( --INTERNAL--kendo-switch-on-track-text, inherit ),
+                var( --INTERNAL--kendo-switch-on-track-bg, transparent ),
+                var( --INTERNAL--kendo-switch-on-track-border, inherit )
             );
         }
         .k-switch-thumb {
+            --INTERNAL--kendo-switch-on-thumb-text: var( --kendo-switch-on-thumb-text, #{$kendo-switch-on-thumb-text} );
+            --INTERNAL--kendo-switch-on-thumb-bg: var( --kendo-switch-on-thumb-bg, #{$kendo-switch-on-thumb-bg} );
+            --INTERNAL--kendo-switch-on-thumb-border: var( --kendo-switch-on-thumb-border, #{$kendo-switch-on-thumb-border} );
+
             @include fill(
-                var( --INTERNAL--kendo-switch-on-thumb-text, #{$kendo-switch-on-thumb-text} ),
-                var( --INTERNAL--kendo-switch-on-thumb-bg, #{$kendo-switch-on-thumb-bg} ),
-                var( --INTERNAL--kendo-switch-on-thumb-border, #{$kendo-switch-on-thumb-border} )
+                var( --INTERNAL--kendo-switch-on-thumb-text, inherit ),
+                var( --INTERNAL--kendo-switch-on-thumb-bg, transparent ),
+                var( --INTERNAL--kendo-switch-on-thumb-border, inherit )
             );
         }
 
