feat(fab): add fluent styles

--- a/packages/fluent/scss/index.scss
+++ b/packages/fluent/scss/index.scss
@@ -89,7 +89,7 @@
 // Command interfaces
 @use "action-buttons";
 @use "appbar";
-// @use "fab";
+@use "fab";
 @use "menu";
 @use "toolbar";
 
@@ -251,7 +251,7 @@
     // Command interfaces
     @include action-buttons.styles();
     @include appbar.styles();
-    // @include fab.styles();
+    @include fab.styles();
     @include menu.styles();
     @include toolbar.styles();
 
