--- a/packages/default/scss/utils/_position.scss
+++ b/packages/default/scss/utils/_position.scss
@@ -25,6 +25,10 @@
     @each $pos in (static, relative, absolute, fixed, sticky) {
         .k-#{$pos},
         .k-pos-#{$pos} { position: $pos !important; } // sass-lint:disable-line brace-style no-important
+
+        // sass-lint:disable-block no-important
+        .\!k-#{$pos},
+        .\!k-pos-#{$pos} { position: $pos !important; }
     }
 
     /// @name k-pos-top
