chore(searchbox): update icon color and hide it when searchbox is focused

--- a/packages/fluent/scss/searchbox/_layout.scss
+++ b/packages/fluent/scss/searchbox/_layout.scss
@@ -1,5 +1,22 @@
 @use "_variables.scss" as *;
+@use "../core/_variables.scss" as *;
 
 @mixin kendo-searchbox--layout() {
-    .k-searchbox { }
+
+    .k-searchbox {
+
+        .k-input-icon {
+            transition: $kendo-transition;
+        }
+
+        &:focus,
+        &:focus-within,
+        &.k-focus {
+            .k-input-icon {
+                width: 0;
+                opacity: 0;
+                transition: $kendo-transition;
+            }
+        }
+    }
 }
