--- a/packages/fluent/scss/core/_variables.scss
+++ b/packages/fluent/scss/core/_variables.scss
@@ -96,7 +96,7 @@ $kendo-padding-x-lg: calc( #{$kendo-padding-x} * 1.5) !default;
 $kendo-padding-y-lg: calc( #{$kendo-padding-y} * 1.5) !default;
 
 // Default transition
-$kendo-transition: color .2s ease-in-out, background-color .2s ease-in-out, border-color .2s ease-in-out, box-shadow .2s ease-in-out !default;
+$kendo-transition: color .2s ease-in-out, background-color .2s ease-in-out, border-color .2s ease-in-out, box-shadow .2s ease-in-out, opacity .2s ease-in-out, width .2s ease-in-out, height .2s ease-in-out !default;
 
 :root {
     --kendo-font-family: #{meta.inspect($kendo-font-family)};
