--- a/packages/fluent/scss/searchbox/_variables.scss
+++ b/packages/fluent/scss/searchbox/_variables.scss
@@ -1,1 +1,5 @@
 @use "../core/color-system" as *;
+
+/// Color of the searchbox icon.
+/// @group searchbox
+$kendo-searchbox-icon-color: get-theme-color-var( primary-130 ) !default;
