--- a/packages/fluent/scss/icon/_layout.scss
+++ b/packages/fluent/scss/icon/_layout.scss
@@ -47,4 +47,14 @@
         margin: 0 -.5em -.5em 0;
     }
 
+    // RTL icons
+    .k-rtl .k-i-indent-increase,
+    .k-rtl .k-i-indent-decrease,
+    .k-rtl .k-i-expand,
+    .k-rtl .k-i-collapse,
+    [dir="rtl"] .k-i-expand,
+    [dir="rtl"] .k-i-collapse {
+        transform: scaleX(-1);
+    }
+
 }
