--- a/packages/fluent/scss/index.scss
+++ b/packages/fluent/scss/index.scss
@@ -128,7 +128,7 @@
 // @use "spreadsheet";
 // @use "pivotgrid";
 // @use "treelist";
-// @use "filter";
+@use "filter";
 // @use "filemanager";
 // @use "taskboard";
 
@@ -290,7 +290,7 @@
     // @include spreadsheet.styles();
     // @include pivotgrid.styles();
     // @include treelist.styles();
-    // @include filter.styles();
+    @include filter.styles();
     // @include filemanager.styles();
     // @include taskboard.styles();
 
