--- a/packages/fluent/scss/index.scss
+++ b/packages/fluent/scss/index.scss
@@ -29,7 +29,7 @@
 // Indicators
 @use "avatar";
 @use "badge";
-// @use "chip";
+@use "chip";
 @use "color-preview";
 // @use "loader";
 // @use "loading";
@@ -191,7 +191,7 @@
     // Indicators
     @include avatar.styles();
     @include badge.styles();
-    // @include chip.styles();
+    @include chip.styles();
     @include color-preview.styles();
     // @include loader.styles();
     // @include loading.styles();
