fix(charts): add chart tooltip popup styles when not a direct child

--- a/packages/default/scss/dataviz/_layout.scss
+++ b/packages/default/scss/dataviz/_layout.scss
@@ -69,7 +69,7 @@
     .k-chart-tooltip-wrapper {
         z-index: 12000;
 
-        > .k-popup {
+        .k-popup {
             padding: 0;
             border-width: 0;
             background: transparent;
