feat(menu-button): add fluent styles

--- a/packages/fluent/scss/index.scss
+++ b/packages/fluent/scss/index.scss
@@ -44,7 +44,7 @@
 // Native forms
 @use "button";
 @use "split-button";
-// @use "menu-button";
+@use "menu-button";
 @use "input";
 @use "textbox";
 @use "textarea";
@@ -206,7 +206,7 @@
     // Native forms
     @include button.styles();
     @include split-button.styles();
-    // @include menu-button.styles();
+    @include menu-button.styles();
     @include input.styles();
     @include textbox.styles();
     @include textarea.styles();
